# Documents-Classification

./: main.py  pyproject.toml  requirements.txt  setup.py
OCR/: imagetoText.py
assets/unstructured/: Conceptual guide - 🦜️🔗 LangChain.url
common context/: common_context.db  create_table.py
doc_processing/: __init__.py  image_to_base64.py  pdf_to_text.py  weblink_to_text.py
graph/: classes.py
graph/chains/: classification.py  parallel_agents.py
graph/nodes/: __init__.py  doc_retriever.py  vector_embedding.py
prompts/: classification_prompt.py
testing/: docs_content_list.py  vs_invoke.py
testing/doc_processing_test/: image_to_base64.py  ocr_image_to_text.py  pdf_to_text.py  urlpath_to_text.py
